# evmlir

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: CMakeLists.txt
include/evmlir/: RevmBridge.h
include/evmlir/Dialect/EVM/: CMakeLists.txt  EVMAttributes.td  EVMDialect.h  EVMOps.h  EVMOps.td  EVMResources.h
include/evmlir/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/evmlir/: CMakeLists.txt
lib/evmlir/Dialect/: CMakeLists.txt
lib/evmlir/Dialect/EVM/: CMakeLists.txt  EVMDialect.cpp  EVMOps.cpp
lib/evmlir/Transforms/: CMakeLists.txt  EVMCanonicalize.cpp
lib/evmlir/Translation/: CMakeLists.txt
lib/evmlir/Translation/Analysis/: InterferenceGraph.cpp  InterferenceGraph.h  LivenessInfo.cpp  LivenessInfo.h
lib/evmlir/Translation/CodeGen/: BinarySearchDispatcher.cpp  BinarySearchDispatcher.h  BytecodeStream.cpp  BytecodeStream.h  DispatchStrategy.h  EVMCostModel.cpp  EVMCostModel.h  EVMEmitter.cpp  EVMEmitter.h  ForkSpec.h  Opcode.h  OpcodeMapper.cpp  OpcodeMapper.h  OsakaSpec.cpp  StackTracker.cpp  StackTracker.h
lib/evmlir/Translation/StackAllocation/: MemoryAllocator.cpp  MemoryAllocator.h  StackAllocator.cpp  StackAllocator.h
revm-bridge/: Cargo.toml
revm-bridge/src/: lib.rs
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Dialect/EVM/: addmod.mlir  address.mlir  balance.mlir  basefee.mlir  blobhash.mlir  blockhash.mlir  bloobbasefee.mlir  byte.mlir  call.mlir  callcode.mlir  calldatacopy.mlir  calldataload.mlir  calldatasize.mlir  caller.mlir  callvalue.mlir  chainid.mlir  codecopy.mlir  codesize.mlir  coinbase.mlir  create.mlir  create2.mlir  delegatecall.mlir  exp.mlir  extcodecopy.mlir  extcodehash.mlir  extcodesize.mlir  gas.mlir  gaslimit.mlir  gasprice.mlir  inline_bytecode.mlir  invalid.mlir  keccak256.mlir  log0.mlir  log1.mlir  log2.mlir  log3.mlir  log4.mlir  mcopy.mlir  mload.mlir  msize.mlir  (+21 more)
test/Translation/: CMakeLists.txt  TestUtils.h
test/Translation/Analysis/: InterferenceGraph.cpp  LivenessInfo.cpp
test/Translation/CodeGen/: EVMCostModel.cpp
test/Translation/StackAllocation/: StackAllocator.cpp
tools/: CMakeLists.txt
tools/evmlir-opt/: CMakeLists.txt  evmlir-opt.cpp
